--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="718965">  <td>22/03/29 13:22:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestUserLoadingTime.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">AcdemyLoginTest</td> 
-  <td>main@745962066</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/29 13:26:26</td>   <td>246749</td> <td title="&lt;&lt;WebTestWinVinayaAcadamyBase.afterMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@745962066</td>   <td></td> </tr>
-<tr bgcolor="b9f197">  <td>22/03/29 13:26:27</td>   <td>247454</td> <td title="&lt;&lt;WinVinayaAcadamyWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@745962066</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/29 13:22:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaAcadamyBase.beforeMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@745962066</td>   <td></td> </tr>
-<tr bgcolor="b9f197">  <td>22/03/29 13:22:19</td>   <td>-47</td> <td title="&gt;&gt;WinVinayaAcadamyWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@745962066</td>   <td></td> </tr>
+<tr bgcolor="93de87">  <td>22/05/12 11:13:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestUserLoadingTime.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">AcdemyLoginTest</td> 
+  <td>main@1422222071</td>   <td></td> </tr>
+<tr bgcolor="c386de">  <td>22/05/12 11:15:12</td>   <td>102080</td> <td title="&lt;&lt;WebTestWinVinayaAcadamyBase.afterMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422222071</td>   <td></td> </tr>
+<tr bgcolor="f978b0">  <td>22/05/12 11:15:12</td>   <td>102925</td> <td title="&lt;&lt;WinVinayaAcadamyWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422222071</td>   <td></td> </tr>
+<tr bgcolor="c386de">  <td>22/05/12 11:13:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaAcadamyBase.beforeMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1422222071</td>   <td></td> </tr>
+<tr bgcolor="f978b0">  <td>22/05/12 11:13:29</td>   <td>-47</td> <td title="&gt;&gt;WinVinayaAcadamyWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@23f7d05d]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1422222071</td>   <td></td> </tr>
 </table>
