--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="718965">  <td>22/03/07 17:36:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestUserLoadingTime.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">AcdemyLoginTest</td> 
-  <td>main@745962066</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/07 17:38:23</td>   <td>125306</td> <td title="&lt;&lt;WebTestWinVinayaAcadamyBase.afterMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@745962066</td>   <td></td> </tr>
-<tr bgcolor="b9f197">  <td>22/03/07 17:38:24</td>   <td>126042</td> <td title="&lt;&lt;WinVinayaAcadamyWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@745962066</td>   <td></td> </tr>
-<tr bgcolor="7fd8ce">  <td>22/03/07 17:36:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaAcadamyBase.beforeMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@745962066</td>   <td></td> </tr>
-<tr bgcolor="b9f197">  <td>22/03/07 17:36:18</td>   <td>-24</td> <td title="&gt;&gt;WinVinayaAcadamyWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@29626d54]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@745962066</td>   <td></td> </tr>
+<tr bgcolor="9cc6b5">  <td>22/05/13 12:14:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestUserLoadingTime.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@41ccb3b9]">AcdemyLoginTest</td> 
+  <td>main@584580417</td>   <td></td> </tr>
+<tr bgcolor="86d8fb">  <td>22/05/13 12:16:18</td>   <td>108131</td> <td title="&lt;&lt;WebTestWinVinayaAcadamyBase.afterMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@41ccb3b9]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@584580417</td>   <td></td> </tr>
+<tr bgcolor="836a6a">  <td>22/05/13 12:16:19</td>   <td>108896</td> <td title="&lt;&lt;WinVinayaAcadamyWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@41ccb3b9]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@584580417</td>   <td></td> </tr>
+<tr bgcolor="86d8fb">  <td>22/05/13 12:14:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaAcadamyBase.beforeMethod()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@41ccb3b9]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@584580417</td>   <td></td> </tr>
+<tr bgcolor="836a6a">  <td>22/05/13 12:14:30</td>   <td>-112</td> <td title="&gt;&gt;WinVinayaAcadamyWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.academy.testauto.test.testsuites.WebTestUserLoadingTime@41ccb3b9]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@584580417</td>   <td></td> </tr>
 </table>
