--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8da67e">  <td>22/05/10 09:42:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestFoundationWeb.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@c689973]">AcdemyLoginTest</td> 
-  <td>main@2012528704</td>   <td></td> </tr>
-<tr bgcolor="9ba0b3">  <td>22/05/10 09:42:53</td>   <td>10409</td> <td title="&lt;&lt;WebTestWinVinayaFoundationBase.afterMethod()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@c689973]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2012528704</td>   <td></td> </tr>
-<tr bgcolor="847660">  <td>22/05/10 09:42:54</td>   <td>11470</td> <td title="&lt;&lt;WinVinayaAcadamyWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@c689973]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2012528704</td>   <td></td> </tr>
-<tr bgcolor="9ba0b3">  <td>22/05/10 09:42:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaFoundationBase.beforeMethod()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@c689973]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@2012528704</td>   <td></td> </tr>
-<tr bgcolor="847660">  <td>22/05/10 09:42:43</td>   <td>-60</td> <td title="&gt;&gt;WinVinayaAcadamyWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@c689973]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2012528704</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>22/05/13 15:47:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestFoundationWeb.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">AcdemyLoginTest</td> 
+  <td>main@1169794610</td>   <td></td> </tr>
+<tr bgcolor="f660a8">  <td>22/05/13 15:47:48</td>   <td>20385</td> <td title="&lt;&lt;WebTestWinVinayaFoundationBase.afterMethod()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1169794610</td>   <td></td> </tr>
+<tr bgcolor="b48a68">  <td>22/05/13 15:47:48</td>   <td>21173</td> <td title="&lt;&lt;WinVinayaFoundationWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1169794610</td>   <td></td> </tr>
+<tr bgcolor="f660a8">  <td>22/05/13 15:47:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaFoundationBase.beforeMethod()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1169794610</td>   <td></td> </tr>
+<tr bgcolor="b48a68">  <td>22/05/13 15:47:27</td>   <td>-38</td> <td title="&gt;&gt;WinVinayaFoundationWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1169794610</td>   <td></td> </tr>
 </table>
