--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ed9375">  <td>22/05/11 16:46:39</td>   <td>0</td> <td title="&gt;&gt;WinVinayaFoundationWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@7e91ed74]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1749978269</td>   <td></td> </tr>
-<tr bgcolor="ba8c93">  <td>22/05/11 16:46:39</td>   <td>105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaFoundationBase.beforeMethod()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@7e91ed74]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1749978269</td>   <td></td> </tr>
-<tr bgcolor="6da882">  <td>22/05/11 16:46:39</td>   <td>105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestFoundationWeb.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@7e91ed74]">AcdemyLoginTest</td> 
-  <td>main@1749978269</td>   <td></td> </tr>
-<tr bgcolor="ba8c93">  <td>22/05/11 16:47:01</td>   <td>21637</td> <td title="&lt;&lt;WebTestWinVinayaFoundationBase.afterMethod()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@7e91ed74]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1749978269</td>   <td></td> </tr>
-<tr bgcolor="ed9375">  <td>22/05/11 16:47:01</td>   <td>22331</td> <td title="&lt;&lt;WinVinayaFoundationWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@7e91ed74]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1749978269</td>   <td></td> </tr>
+<tr bgcolor="b48a68">  <td>22/05/16 14:54:43</td>   <td>0</td> <td title="&gt;&gt;WinVinayaFoundationWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1169794610</td>   <td></td> </tr>
+<tr bgcolor="f660a8">  <td>22/05/16 14:54:43</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaFoundationBase.beforeMethod()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1169794610</td>   <td></td> </tr>
+<tr bgcolor="94f994">  <td>22/05/16 14:54:43</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestFoundationWeb.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">AcdemyLoginTest</td> 
+  <td>main@1169794610</td>   <td></td> </tr>
+<tr bgcolor="f660a8">  <td>22/05/16 14:55:01</td>   <td>18555</td> <td title="&lt;&lt;WebTestWinVinayaFoundationBase.afterMethod()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1169794610</td>   <td></td> </tr>
+<tr bgcolor="b48a68">  <td>22/05/16 14:55:02</td>   <td>19308</td> <td title="&lt;&lt;WinVinayaFoundationWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.foundation.web.testauto.test.testsuites.WebTestFoundationWeb@f8c1ddd]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1169794610</td>   <td></td> </tr>
 </table>
