--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="94f994">  <td>22/05/16 14:47:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestInfosystemsWeb.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@70be0a2b]">AcdemyLoginTest</td> 
-  <td>main@634540230</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>22/05/16 14:48:19</td>   <td>35375</td> <td title="&lt;&lt;WebTestWinVinayaInfosystemsBase.afterMethod()[pri:0, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@70be0a2b]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@634540230</td>   <td></td> </tr>
-<tr bgcolor="b48a68">  <td>22/05/16 14:48:20</td>   <td>36214</td> <td title="&lt;&lt;WinVinayaInfosystemsWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@70be0a2b]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@634540230</td>   <td></td> </tr>
-<tr bgcolor="f660a8">  <td>22/05/16 14:47:43</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaInfosystemsBase.beforeMethod()[pri:0, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@70be0a2b]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@634540230</td>   <td></td> </tr>
-<tr bgcolor="b48a68">  <td>22/05/16 14:47:43</td>   <td>-49</td> <td title="&gt;&gt;WinVinayaInfosystemsWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@70be0a2b]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@634540230</td>   <td></td> </tr>
+<tr bgcolor="6da882">  <td>22/06/08 16:53:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WebTestInfosystemsWeb.AcdemyLoginTest(java.lang.String, java.lang.String)[pri:1, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@3878be7b]">AcdemyLoginTest</td> 
+  <td>main@1858863803</td>   <td></td> </tr>
+<tr bgcolor="ba8c93">  <td>22/06/08 16:53:49</td>   <td>38841</td> <td title="&lt;&lt;WebTestWinVinayaInfosystemsBase.afterMethod()[pri:0, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@3878be7b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1858863803</td>   <td></td> </tr>
+<tr bgcolor="ed9375">  <td>22/06/08 16:53:49</td>   <td>39596</td> <td title="&lt;&lt;WinVinayaInfosystemsWebBaseTest.afterSuite()[pri:0, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@3878be7b]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1858863803</td>   <td></td> </tr>
+<tr bgcolor="ba8c93">  <td>22/06/08 16:53:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WebTestWinVinayaInfosystemsBase.beforeMethod()[pri:0, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@3878be7b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1858863803</td>   <td></td> </tr>
+<tr bgcolor="ed9375">  <td>22/06/08 16:53:10</td>   <td>-109</td> <td title="&gt;&gt;WinVinayaInfosystemsWebBaseTest.beforeSuite()[pri:0, instance:org.winvinaya.infosystems.web.testauto.test.testsuites.WebTestInfosystemsWeb@3878be7b]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1858863803</td>   <td></td> </tr>
 </table>
